tests/snapshots/run_wpt_conformance__trtx_pad_float16_4D_tensor_options_mode__edge_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "pad float16 4D tensor options.mode='edge'",
    "trtx",
    "PASS",
)
